--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,25 @@
 .ui-menu-color-download {
     background-color: #525252;
 }
+/*-------------------------------------------- Special paddings/margins/text */
+
+h1,h2,h3,h4 {
+    margin: 0;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.general-sub {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    color: #fafafa;
+}
+
+.inline-block {
+    display: inline-block;
+}
 
 /*-------------------------------------------- Heading */
 
@@ -73,3 +92,11 @@ header {
     padding: 0;
 }
 
+/*-------------------------------------------- Footer */
+
+footer {
+    background-color: #525252;
+    color: #fafafa;
+    min-height: 120px;
+    margin: 0;
+}
