--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,3 +209,15 @@ footer {
 .social-links li a i:hover {
     background-color: #e84610;
 }
+
+/*-------------------------------------------- Three Reasons */
+
+.reasons-icon {
+    font-size: 26px;
+        color: #e67e22;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
+
+}
