--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,7 +226,6 @@ footer {
 
 }
 
-
 /*-------------------------------------------- Personal Info */
 
 .personal-info-item {
@@ -260,4 +259,21 @@ footer {
 .personal-info-item .value {
     position: relative;
     width: 60%;
+}
+
+/*-------------------------------------------- Skills */
+
+.progress {
+    position: relative;
+    height: 25px;
+    margin-bottom: 4px;
+}
+
+.progress-type {
+    position: relative;
+    left: 0px;
+    font-weight: 400;
+    padding: 3px 30px 2px 10px;
+    color: #fafafa;
+    background-color: 25, 25, 25, 0.2;
 }
